# Terraform-dojo

./: .gitignore  AGENTS.md  README.md  locals.tf  main.tf  mkdocs.yml  providers.tf  variables.tf  versions.tf
.cursor/rules/: terraform-standards.mdc
diagram/: README.md
diagram/awsdac/: external-object-storage-datasync-to-s3.yml  multi-account-scheduled-s3-sync.yml  synthetic-monitoring.yml
diagram/definitions/: definition-for-aws-icons-light.yaml
docs/: deployment.md  index.md  overview.md  variables.md
docs/architecture/: aws-application-platform-decision-guide.md  aws-web-hosting-decision-guide.md
docs/guidelines/: app-ecs-cicd-guideline.md  app-lambda-cicd-guideline.md  codepipeline-standard-policy.md  directory-file-reference.md  index.md  module-design-guideline.md  review-checklist.md  secrets-management-guideline.md  state-structure.md  terraform-coding-guideline.md  terraform-release-flow.md  terraform-structure-design-guide.md
docs/modules/: index.md
docs/tips/: import-to-hcl.md  local-merge.md  sample.README.md  shell-aliases.md
modules/cloudfront/: main.tf  variables.tf
modules/codepipeline/: README.md
modules/ecr/: locals.tf  main.tf  outputs.tf  variables.tf
modules/iam/: main.tf
modules/ipam/: locals.tf  main.tf  variables.tf
modules/kms/: main.tf  outputs.tf  variables.tf
modules/llm-service/llm-batch/lambdas/: llm_batch_collector.py  llm_batch_preparer.py  llm_batch_sender.py  pyproject.toml
modules/llm-service/llm-batch/lambdas/common/: __init__.py  aws_clients.py  batch_status.py  response_utils.py
modules/s3/: main.tf  (+1 more)
(+160 files in other folders)
