[project]
name = "llm-batch-lambdas"
version = "0.1.0"
description = "LLM batch processing Lambda functions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "anthropic>=0.46.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.4",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.12.0",
    "ruff>=0.11.2",
    "moto>=5.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
extend = "../../../../../ruff.toml"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # 行長制限は緩和
line-length = 100

[tool.ruff.per-file-ignores]
"test_*.py" = ["F401", "F811"]

[tool.ruff.isort]
known-first-party = ["common"]

[tool.pyright]
extends = "../../pyrightconfig.json"
include = [".", "tests"]
exclude = ["**/.ruff_cache", "**/__pycache__"]
pythonVersion = "3.13" 